# RegressionModel

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
ML/Data/: Dataset.cpp  Dataset.hpp
ML/Math/: Binomial.hpp  Derivative.hpp  Factorial.hpp  FiniteDifference.hpp  MathConcepts.hpp  Power.hpp
ML/Math/Approximation/: IApproximation.hpp  LinearApproximation.hpp
ML/Math/Data/: Vector.cpp  Vector.hpp
ML/Math/Gradient/: Adagrad.hpp  Gradient.hpp  IGradient.hpp  MiniBatchGradient.hpp  RMSPROP.hpp  StochasticAverageGradient.hpp  StochasticGradient.hpp  StochasticGradientWithMomentum.hpp
ML/Math/LossFunctions/: ILossFunction.hpp  SquaredError.hpp
ML/Regression/: LinearRegression.hpp  Regression.hpp
